--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jun 13 11:11:49 2018</p>
+         Last Run: Wed Jun 13 16:31:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Fred Seymour / École Notre-Dame-de-la-Paix</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jun 14, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Chance of Rain</td>
                         <td>13</td>
                         <td>13</td>
-                        <td>39</td>
-                        <td>60</td>
+                        <td>47</td>
+                        <td>65</td>
                         <td>1</td>
-                        <td>18</td>
+                        <td>19</td>
                         <td>WNW</td>
-                        <td>78</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>32</td>
+                        <td>37</td>
                         <td>61</td>
                         <td>1</td>
                         <td>16</td>
                         <td>NW</td>
-                        <td>80</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>23</td>
-                        <td>60</td>
+                        <td>5</td>
+                        <td>58</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>WNW</td>
-                        <td>89</td>
+                        <td>77</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "39",
-                 "32",
-                 "23"
+                 "47",
+                 "37",
+                 "5"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
+                 "65",
                  "61",
-                 "60"
+                 "58"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "80",
-                 "89"
+                 "86",
+                 "79",
+                 "77"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jun 13 11:11:49 2018</p>
+         Last Run: Wed Jun 13 16:31:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - OAK 8</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jun 16, 2018 - 12:00PM til  1:30PM</H4>
                <table class="table table-striped">
@@ -233,48 +233,48 @@
                         <td>Chance of Rain</td>
                         <td>13</td>
                         <td>13</td>
-                        <td>78</td>
-                        <td>73</td>
+                        <td>76</td>
+                        <td>75</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>N</td>
-                        <td>88</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Rain</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>79</td>
-                        <td>65</td>
+                        <td>Thunderstorm</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>91</td>
+                        <td>68</td>
                         <td>4</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>NNE</td>
-                        <td>100</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Rain</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>89</td>
-                        <td>64</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>92</td>
+                        <td>66</td>
                         <td>3</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>NNE</td>
                         <td>100</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Rain</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>93</td>
-                        <td>60</td>
-                        <td>4</td>
+                        <td>Chance of Rain</td>
                         <td>14</td>
+                        <td>14</td>
+                        <td>72</td>
+                        <td>64</td>
+                        <td>4</td>
+                        <td>16</td>
                         <td>NNE</td>
-                        <td>100</td>
+                        <td>86</td>
                      </tr>
                   </tbody>
                </table>
@@ -320,9 +320,9 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "13",
-                 "15",
-                 "15",
-                 "15"
+                 "14",
+                 "14",
+                 "14"
                ]
              },
              {
@@ -332,9 +332,9 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "13",
-                 "15",
-                 "15",
-                 "15"
+                 "14",
+                 "14",
+                 "14"
                ]
              }
            ]
@@ -386,10 +386,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "78",
-                 "79",
-                 "89",
-                 "93"
+                 "76",
+                 "91",
+                 "92",
+                 "72"
                ]
              },
              {
@@ -397,10 +397,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
-                 "65",
-                 "64",
-                 "60"
+                 "75",
+                 "68",
+                 "66",
+                 "64"
                ]
              },
              {
@@ -408,10 +408,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
+                 "89",
+                 "87",
                  "100",
-                 "100",
-                 "100"
+                 "86"
                ]
              }
            ]
@@ -428,7 +428,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jun 13 11:11:49 2018</p>
+         Last Run: Wed Jun 13 16:31:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jun 16, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -449,63 +449,63 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Rain</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>84</td>
-                        <td>58</td>
+                        <td>Chance of Rain</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>79</td>
+                        <td>61</td>
                         <td>2</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNE</td>
-                        <td>100</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Rain</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>83</td>
-                        <td>57</td>
+                        <td>Chance of Rain</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>58</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>NNE</td>
-                        <td>100</td>
+                        <td>N</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>73</td>
-                        <td>57</td>
+                        <td>53</td>
+                        <td>58</td>
                         <td>1</td>
-                        <td>8</td>
-                        <td>NNE</td>
-                        <td>80</td>
+                        <td>10</td>
+                        <td>N</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>48</td>
-                        <td>62</td>
+                        <td>54</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>N</td>
-                        <td>79</td>
+                        <td>NNW</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>13</td>
                         <td>13</td>
-                        <td>21</td>
-                        <td>65</td>
+                        <td>24</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NNW</td>
-                        <td>79</td>
+                        <td>NW</td>
+                        <td>76</td>
                      </tr>
                   </tbody>
                </table>
@@ -551,8 +551,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "16",
-                 "16",
+                 "15",
+                 "15",
                  "15",
                  "14",
                  "13"
@@ -564,8 +564,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "16",
-                 "16",
+                 "15",
+                 "15",
                  "15",
                  "14",
                  "13"
@@ -621,11 +621,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "84",
-                 "83",
-                 "73",
-                 "48",
-                 "21"
+                 "79",
+                 "58",
+                 "53",
+                 "54",
+                 "24"
                ]
              },
              {
@@ -633,11 +633,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "61",
                  "58",
-                 "57",
-                 "57",
-                 "62",
-                 "65"
+                 "58",
+                 "61",
+                 "64"
                ]
              },
              {
@@ -645,11 +645,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "100",
-                 "100",
+                 "84",
                  "80",
-                 "79",
-                 "79"
+                 "77",
+                 "77",
+                 "76"
                ]
              }
            ]
