--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jun 13 16:31:17 2018</p>
+         Last Run: Thu Jun 14 13:08:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Fred Seymour / École Notre-Dame-de-la-Paix</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jun 14, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Overcast</td>
                         <td>13</td>
                         <td>13</td>
-                        <td>47</td>
-                        <td>65</td>
-                        <td>1</td>
-                        <td>19</td>
-                        <td>WNW</td>
-                        <td>86</td>
-                     </tr>
-                     <tr>
-                        <td>07:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>14</td>
-                        <td>14</td>
-                        <td>37</td>
-                        <td>61</td>
+                        <td>15</td>
+                        <td>64</td>
                         <td>1</td>
                         <td>16</td>
                         <td>NW</td>
-                        <td>79</td>
+                        <td>89</td>
+                     </tr>
+                     <tr>
+                        <td>07:00 PM</td>
+                        <td>Overcast</td>
+                        <td>13</td>
+                        <td>13</td>
+                        <td>15</td>
+                        <td>62</td>
+                        <td>1</td>
+                        <td>16</td>
+                        <td>NW</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>14</td>
-                        <td>14</td>
-                        <td>5</td>
-                        <td>58</td>
-                        <td>0</td>
                         <td>13</td>
+                        <td>13</td>
+                        <td>6</td>
+                        <td>60</td>
+                        <td>0</td>
+                        <td>14</td>
                         <td>WNW</td>
-                        <td>77</td>
+                        <td>67</td>
                      </tr>
                   </tbody>
                </table>
@@ -107,8 +107,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "13",
-                 "14",
-                 "14"
+                 "13",
+                 "13"
                ]
              },
              {
@@ -118,8 +118,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "13",
-                 "14",
-                 "14"
+                 "13",
+                 "13"
                ]
              }
            ]
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "47",
-                 "37",
-                 "5"
+                 "15",
+                 "15",
+                 "6"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "61",
-                 "58"
+                 "64",
+                 "62",
+                 "60"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "86",
-                 "79",
-                 "77"
+                 "89",
+                 "83",
+                 "67"
                ]
              }
            ]
@@ -204,12 +204,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif"><br/><h4>Weather Radar from Alberta Hail Suppresion Project</h4>
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jun 13 16:31:17 2018</p>
+         Last Run: Thu Jun 14 13:08:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - OAK 8</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jun 16, 2018 - 12:00PM til  1:30PM</H4>
                <table class="table table-striped">
@@ -230,51 +231,51 @@
                   <tbody>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Chance of Rain</td>
+                        <td>Rain</td>
                         <td>13</td>
                         <td>13</td>
-                        <td>76</td>
-                        <td>75</td>
-                        <td>2</td>
-                        <td>16</td>
+                        <td>81</td>
+                        <td>73</td>
+                        <td>3</td>
+                        <td>19</td>
                         <td>N</td>
-                        <td>89</td>
+                        <td>100</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Thunderstorm</td>
+                        <td>Rain</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>91</td>
-                        <td>68</td>
+                        <td>89</td>
+                        <td>69</td>
                         <td>4</td>
-                        <td>18</td>
+                        <td>19</td>
                         <td>NNE</td>
-                        <td>87</td>
+                        <td>100</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Rain</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>92</td>
-                        <td>66</td>
-                        <td>3</td>
-                        <td>18</td>
+                        <td>87</td>
+                        <td>68</td>
+                        <td>6</td>
+                        <td>19</td>
                         <td>NNE</td>
                         <td>100</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Rain</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>72</td>
-                        <td>64</td>
-                        <td>4</td>
-                        <td>16</td>
-                        <td>NNE</td>
                         <td>86</td>
+                        <td>68</td>
+                        <td>5</td>
+                        <td>19</td>
+                        <td>NNE</td>
+                        <td>100</td>
                      </tr>
                   </tbody>
                </table>
@@ -386,10 +387,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "76",
-                 "91",
-                 "92",
-                 "72"
+                 "81",
+                 "89",
+                 "87",
+                 "86"
                ]
              },
              {
@@ -397,10 +398,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
+                 "73",
+                 "69",
                  "68",
-                 "66",
-                 "64"
+                 "68"
                ]
              },
              {
@@ -408,10 +409,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "89",
-                 "87",
                  "100",
-                 "86"
+                 "100",
+                 "100",
+                 "100"
                ]
              }
            ]
@@ -428,7 +429,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jun 13 16:31:17 2018</p>
+         Last Run: Thu Jun 14 13:08:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jun 16, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -449,63 +450,63 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>79</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>42</td>
                         <td>61</td>
-                        <td>2</td>
-                        <td>11</td>
+                        <td>3</td>
+                        <td>13</td>
                         <td>NNE</td>
-                        <td>84</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>58</td>
-                        <td>58</td>
-                        <td>1</td>
-                        <td>10</td>
-                        <td>N</td>
-                        <td>80</td>
+                        <td>42</td>
+                        <td>59</td>
+                        <td>2</td>
+                        <td>11</td>
+                        <td>NNE</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>53</td>
-                        <td>58</td>
+                        <td>41</td>
+                        <td>54</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>13</td>
                         <td>N</td>
-                        <td>77</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>14</td>
-                        <td>14</td>
-                        <td>54</td>
-                        <td>61</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>41</td>
+                        <td>52</td>
                         <td>0</td>
-                        <td>6</td>
-                        <td>NNW</td>
-                        <td>77</td>
+                        <td>10</td>
+                        <td>N</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of Rain</td>
                         <td>13</td>
                         <td>13</td>
-                        <td>24</td>
-                        <td>64</td>
+                        <td>38</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NW</td>
-                        <td>76</td>
+                        <td>N</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -551,10 +552,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "15",
-                 "15",
-                 "15",
                  "14",
+                 "15",
+                 "15",
+                 "15",
                  "13"
                ]
              },
@@ -564,10 +565,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "15",
-                 "15",
-                 "15",
                  "14",
+                 "15",
+                 "15",
+                 "15",
                  "13"
                ]
              }
@@ -621,11 +622,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "79",
-                 "58",
-                 "53",
-                 "54",
-                 "24"
+                 "42",
+                 "42",
+                 "41",
+                 "41",
+                 "38"
                ]
              },
              {
@@ -634,10 +635,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "61",
-                 "58",
-                 "58",
-                 "61",
-                 "64"
+                 "59",
+                 "54",
+                 "52",
+                 "56"
                ]
              },
              {
@@ -645,11 +646,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "84",
-                 "80",
-                 "77",
-                 "77",
-                 "76"
+                 "69",
+                 "70",
+                 "72",
+                 "70",
+                 "69"
                ]
              }
            ]
